<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/profile2" />

    <TextView
        android:id="@+id/Nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/user"
        android:drawablePadding="8dp"
        android:hint="@string/nama" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="8dp"
        android:hint="@string/email" />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="8dp"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/nomorHp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="8dp"
        android:hint="@string/nomor_hp" />

    <TextView
        android:id="@+id/Alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/home"
        android:drawablePadding="8dp"
        android:hint="@string/alamat" />

    <Button
        android:id="@+id/btn_LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_button_background"
        android:layout_margin="25dp"
        android:text="@string/logout"/>

</LinearLayout>
