<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".HomeUser">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingTop="24dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_person_white_24dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:fontFamily="@font/calibri"
                        android:text="Profile"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />


                </RelativeLayout>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:src="@drawable/profile2" />

            <TextView
                android:id="@+id/NamaUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/user"
                android:drawablePadding="8dp"
                android:hint="@string/nama" />

            <TextView
                android:id="@+id/emailUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="8dp"
                android:hint="@string/email" />

            <TextView
                android:id="@+id/passwordUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="8dp"
                android:hint="@string/password" />

            <Button
                android:id="@+id/btn_LogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button_background"
                android:layout_margin="25dp"
                android:text="@string/logout"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="100">

            <LinearLayout
                android:id="@+id/homeUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_home_gray_24dp" />

                <View
                    android:layout_width="84dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@color/background"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/userProfil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_person_gray_24dp" />

                <View
                    android:layout_width="84dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@color/background" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>